# mcp-benchmark-analysis

./: .gitignore  PRESENTATION_CHECKLIST.md  PRIORITIES_EXPLAINED.md  PROJECT_AUDIT.md  PROJECT_SUMMARY.md  README.md  REAL_AGRICULTURE_ANALYSIS.md  SERVER_COMPARISON.md  SIMPLE_EXPLANATION.md  VISUALIZATION_GUIDE.md  _debug_call.txt  _debug_dis.txt  farm_dashboard.html  farm_visualization.py  main.py  pyproject.toml  server.py  server_professional.py  start_farm.bat  streamlit_dashboard.py  visualization_requirements.txt
benchmark/: QUICK_START.md  benchmark_runner.py  metrics_collector.py  mock_llm.py  requirements_additional.txt  test_scenarios.py  traditional_baseline.py
benchmark/results/: mcp_claude_3.5_20260412_194635_accuracy.csv  mcp_claude_3.5_20260412_194635_performance.csv  mcp_claude_3.5_20260412_195407_accuracy.csv  mcp_claude_3.5_20260412_195407_interoperability.csv  mcp_claude_3.5_20260412_195407_performance.csv  mcp_gpt4o_20260412_194827_accuracy.csv  mcp_gpt4o_20260412_194827_interoperability.csv  mcp_gpt4o_20260412_194827_performance.csv  mcp_gpt4o_20260412_195407_accuracy.csv  mcp_gpt4o_20260412_195407_performance.csv  streamlit_results.csv  traditional_claude_3.5_20260412_194731_accuracy.csv  traditional_claude_3.5_20260412_194731_interoperability.csv  traditional_claude_3.5_20260412_194731_performance.csv  traditional_claude_3.5_20260412_195407_accuracy.csv  traditional_claude_3.5_20260412_195407_performance.csv  traditional_gpt4o_20260412_194912_accuracy.csv  traditional_gpt4o_20260412_194912_interoperability.csv  (+3 more)
